Update and rename config_sample.env to config.env

--- a/config.env
+++ b/config.env
@@ -1,23 +1,22 @@
-#Remove this line before deploying
-_____REMOVE_THIS_LINE_____=True
+
 
 # ENTER BOT TOKEN (Get your BOT_TOKEN by talking to @botfather)
-BOT_TOKEN = ""
-GDRIVE_FOLDER_ID = ""
-OWNER_ID = ""
+BOT_TOKEN = "5666249143:AAGRECleQ_4vdOJBb8QEaHrZAoHHeisRn0E"
+GDRIVE_FOLDER_ID = "0ABvhgDFeeEddUk9PVA"
+OWNER_ID = "1215275768"
 DOWNLOAD_DIR = "/home/username/mirror-bot/downloads"
 DOWNLOAD_STATUS_UPDATE_INTERVAL = 5
 AUTO_DELETE_MESSAGE_DURATION = 20
-IS_TEAM_DRIVE = ""
-TELEGRAM_API = ""
-TELEGRAM_HASH = ""
-USE_SERVICE_ACCOUNTS = ""
+IS_TEAM_DRIVE = "False"
+TELEGRAM_API = "9539951"
+TELEGRAM_HASH = "89ce95095d48f7f8eb1aee490a944863"
+USE_SERVICE_ACCOUNTS = "False"
 
 # Optional config
 ACCOUNTS_ZIP_URL = "" #Enter Direct Links TO Import Service Accounts Directly From Urls Instead Of Adding Files To Repo.( Archive the accounts folder to a zip file.)
 TOKEN_PICKLE_URL = "" #Enter Direct Links TO Import Credentials Directly From Urls Instead Of Adding Files To Repo.
-AUTHORIZED_CHATS = "" #Separated by space
-SUDO_USERS = ""  #Separated by space
+AUTHORIZED_CHATS = "-782926622" #Separated by space
+SUDO_USERS = "1769612004 1215275768"  #Separated by space
 LOGS_CHATS = "" #Separated by space
 DATABASE_URL = ""
 IGNORE_PENDING_REQUESTS = ""
@@ -31,8 +30,8 @@ SHORTENER_API = ""
 STOP_DUPLICATE_CLONE = ""
 CLONE_LIMIT = ""
 TG_SPLIT_SIZE = "" # leave it empty for max size(2GB)
-AS_DOCUMENT = ""
-CUSTOM_FILENAME = ""
+AS_DOCUMENT = "True"
+CUSTOM_FILENAME = "Killua"
 RECURSIVE_SEARCH = "" #T/F And Fill drive_folder File Using Driveid.py Script.
 UPTOBOX_TOKEN = "" 
 # View Link button to open file Index Link in browser instead of direct download link
