--- a/config.env
+++ b/config.env
@@ -31,7 +31,7 @@ STOP_DUPLICATE_CLONE = ""
 CLONE_LIMIT = ""
 TG_SPLIT_SIZE = "" # leave it empty for max size(2GB)
 AS_DOCUMENT = "True"
-CUSTOM_FILENAME = "Killua"
+CUSTOM_FILENAME = "Killua-"
 RECURSIVE_SEARCH = "" #T/F And Fill drive_folder File Using Driveid.py Script.
 UPTOBOX_TOKEN = "" 
 # View Link button to open file Index Link in browser instead of direct download link
@@ -41,7 +41,7 @@ VIEW_LINK = ""
 CRYPT = ""
 # Add more buttons (two buttons are already added of file link and index link, you can add extra buttons too, these are optional)
 # If you don't know what are below entries, simply leave them, Don't fill anything in them.
-BUTTON_THREE_NAME = ""
+Owner = "@killua_00"
 BUTTON_THREE_URL = ""
 BUTTON_FOUR_NAME = ""
 BUTTON_FOUR_URL = ""
