--- a/config.env
+++ b/config.env
@@ -31,7 +31,7 @@ STOP_DUPLICATE_CLONE = ""
 CLONE_LIMIT = ""
 TG_SPLIT_SIZE = "" # leave it empty for max size(2GB)
 AS_DOCUMENT = "True"
-CUSTOM_FILENAME = "[MovieWars]"
+CUSTOM_FILENAME = ""
 RECURSIVE_SEARCH = "" #T/F And Fill drive_folder File Using Driveid.py Script.
 UPTOBOX_TOKEN = "" 
 # View Link button to open file Index Link in browser instead of direct download link
